--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
   "scripts": {
     "test": "mocha tests --recursive"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lolatravel/eslint-plugin-lola.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lolatravel/eslint-plugin-lola/issues"
+  },
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "requireindex": "~1.1.0"
   },
